--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-2"> Conditional Prediction: Example Situations</h2>
+
+        <div class="content">
+          <p>
+            To demonstrate that the proposed prediction model is capable of making conditional predictions, we modify the planned trajectories of individual vehicles and predict the remaining vehicles.
+            Similarly, an automated vehicle could query the prediction model with different planned trajectories for itself and select a plan based on the corresponding predictions.
+          </p>
+        </div>
         
         <h2 class="subtitle is-3">Example 1: Unsignalized Intersection with All-Way Stop</h2>
         <div class="hero-body">
