--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 1: Ground truth evolution.
+            Ground truth evolution.
           </h2>
         </div>
         <div class="hero-body">
@@ -231,7 +231,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 1: Predicted evolution with condition "What if #6 (pink) drives before #3 (red)?".
+            Conditional prediction: "What if #6 (pink) drives before #3 (red)?".
           </h2>
         </div>
         <div class="hero-body">
@@ -241,7 +241,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 1: Predicted evolution with condition "What if #6 (pink) gives way to #3 (red)?".
+            Conditional prediction: "What if #6 (pink) gives way to #3 (red)?".
           </h2>
         </div>
 
@@ -253,7 +253,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 2: Ground truth evolution.
+            Ground truth evolution.
           </h2>
         </div>
         <div class="hero-body">
@@ -263,7 +263,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 2: Predicted evolution with condition "What if #2 (green) gives way #0 (blue)?".
+            Conditional prediction: "What if #2 (green) gives way #0 (blue)?".
           </h2>
         </div>
         <div class="hero-body">
@@ -273,7 +273,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 2: Predicted evolution with condition "What if #2 (green) cuts #0 (blue) off?".
+            Conditional prediction: "What if #2 (green) cuts #0 (blue) off?".
           </h2>
         </div>
 
@@ -285,7 +285,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 3: Ground truth evolution.
+            Ground truth evolution.
           </h2>
         </div>
         <div class="hero-body">
@@ -295,7 +295,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 3: Predicted evolution with condition "What if #8 (yellow) is cooperative and allows #7 (gray) to merge?".
+            Conditional prediction: "What if #8 (yellow) is cooperative and allows #7 (gray) to merge?".
           </h2>
         </div>
         <div class="hero-body">
@@ -305,7 +305,7 @@
             type="video/mp4">
           </video>
           <h2 class="subtitle has-text-centered">
-            Example 3: Predicted evolution with condition "What if #8 (yellow) is not cooperative and accelerates to prevent #7 (gray) from merging?".
+            Conditional prediction: "What if #8 (yellow) is not cooperative and accelerates to prevent #7 (gray) from merging?".
           </h2>
         </div>
 
