--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-2"> Trainings Setup</h2>
-        <img src="static/images/ail_setup.png" alt="Trainings Setup"/>
+        <h2 class="title is-2"> Training Setup</h2>
+        <img src="static/images/ail_setup.png" alt="Training Setup"/>
         <div class="content">
           <p>
             We employ Adversarial Inverse Reinforcement Learning (AIRL) [<a href="https://arxiv.org/abs/1710.11248" target="_blank">1</a>] to learn the behavior model. 
@@ -214,6 +214,13 @@
         </div>
         
         <h2 class="subtitle is-3">Example 1: Unsignalized Intersection with All-Way Stop</h2>
+        <div class="content">
+          <p>
+            In this situation, the pink vehicle (ID 6) intends to turn right, while the oncoming red vehicle (ID 3) intends to turn left towards the same exit. 
+            Assuming that ID 6 is an automated vehicle, it must decide whether to proceed before or yield to ID 3.
+            We predict the evolution of the traffic situation for both options separately to evaluate the consequences.
+          </p>
+        </div>
         <div class="hero-body">
           <video poster="" id="tree" autoplay controls muted loop height="100%">
             <!-- Your video here -->
@@ -246,6 +253,12 @@
         </div>
 
         <h2 class="subtitle is-3">Example 2: Roundabout</h2>
+        <div class="content">
+          <p>
+            In this situation, the green vehicle (ID 2) should yield to the blue vehicle (ID 0). 
+            To showcase the prediction model’s reactiveness, we also predict the traffic evolution if ID 2 enters the roundabout, cutting off ID 0.
+          </p>
+        </div>
         <div class="hero-body">
           <video poster="" id="tree" autoplay controls muted loop height="100%">
             <!-- Your video here -->
@@ -278,6 +291,12 @@
         </div>
 
         <h2 class="subtitle is-3">Example 3: Merging</h2>
+        <div class="content">
+          <p>
+            In this scenario, the gray vehicle (ID 7) is trying to merge onto the left lane, which requires cooperation from the yellow vehicle (ID 8). 
+            The predictions below show ID 8 either cooperating in one case or not in the other.
+          </p>
+        </div>
         <div class="hero-body">
           <video poster="" id="tree" autoplay controls muted loop height="100%">
             <!-- Your video here -->
