--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <h2 class="subtitle is-3">Example 1: Unsignalized Intersection with All-Way Stop</h2>
         <div class="content">
           <p>
-            In this situation, the pink vehicle (ID 6) intends to turn right, while the oncoming red vehicle (ID 3) intends to turn left towards the same exit. 
+            In this scenario, the pink vehicle (ID 6) intends to turn right, while the oncoming red vehicle (ID 3) intends to turn left towards the same exit. 
             Assuming that ID 6 is an automated vehicle, it must decide whether to proceed before or yield to ID 3.
             We predict the evolution of the traffic situation for both options separately to evaluate the consequences.
           </p>
@@ -255,7 +255,7 @@
         <h2 class="subtitle is-3">Example 2: Roundabout</h2>
         <div class="content">
           <p>
-            In this situation, the green vehicle (ID 2) should yield to the blue vehicle (ID 0). 
+            In this scenario, the green vehicle (ID 2) should yield to the blue vehicle (ID 0). 
             To showcase the prediction model’s reactiveness, we also predict the traffic evolution if ID 2 enters the roundabout, cutting off ID 0.
           </p>
         </div>
