--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Open Graph meta tags for social media -->
   <meta property="og:title" content="Conditional Prediction by Simulation for Automated Driving" />
   <meta property="og:description" content="We predict traffic situations by executing learned behavior models in a closed-loop simulation. By assuming various candidate trajectories for the automated vehicle, we generate predictions conditioned on each of them." />
-  <meta property="og:url" content="https://fabikonsti.github.io/ConditionalPredictionBySimulation/" />
+  <meta property="og:url" content="https://conditionalpredictionbysimulation.github.io/" />
   <!-- Path to banner image. Optimal dimensions are 1200x630 -->
   <meta property="og:image" content="static/images/socials_banner_image.png" />
   <meta property="og:image:width" content="1200" />
