--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="content">
           <p>
             Normalized histogram of executed actions of the learned behavior model (blue) and the corresponding ground truth vehicles (orange). 
-            The large overlap indicates that the policy effectively captures the correct distribution of actions. The peak at 0 m/s^2 occurs due to the preprocessing, where for vehicles at standstill (e.g., waiting at a yield line) both their acceleration and steering angle were set to zero.
+            The large overlap indicates that the policy effectively captures the correct distribution of actions. The peak at 0 m/s<sup>2</sup> occurs due to the preprocessing, where for vehicles at standstill (e.g., waiting at a yield line) both their acceleration and steering angle were set to zero.
           </p>
         </div>
 
