Updated website link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a href="https://scholar.google.com/citations?user=KPIiI2QAAAAJ&hl=en" target="_blank">Moritz Sackmann</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://ieeexplore.ieee.org/author/37409297400" target="_blank">Ulrich Hofmann</a><sup>1</sup>,
+              <a href="https://scholar.google.de/citations?user=w7th-ZgAAAAJ&hl=en" target="_blank">Ulrich Hofmann</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.de/citations?user=OeAQ2c0AAAAJ&hl=en" target="_blank">Christoph Stiller</a><sup>2</sup>
