added arxiv link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,17 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- Arxiv PDF link -->
+              <!-- ArXiv abstract Link -->
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2502.03286" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              
+              <!-- Paper PDF link -->
               <span class="link-block">
                 <a href="example_link_to_pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -92,15 +102,7 @@
                 </a>
               </span>
 
-              <!-- ArXiv abstract Link -->
-              <!-- <span class="link-block">
-                <a href="example_link_to_pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv link to be done</span>
-                </a>
-              </span> -->
+              
             </div>
           </div>
         </div>
