Added Paper link and BibTex

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
               
               <!-- Paper PDF link -->
               <span class="link-block">
-                <a href="example_link_to_pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://www.uni-das.de/images/pdf/fas-workshop/2025/FAS2025-21-Konstantinidis.pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper link to be done</span>
+                  <span>Paper</span>
                 </a>
               </span>
 
@@ -345,7 +345,17 @@
         <div class="column is-four-fifths">
           <h2 class="title">BibTeX</h2>
           <div class="has-text-justified">
-            <pre><code style="width:100%;">To be done.</code></pre>
+            <pre><code style="width:100%;">
+              @misc{konstantinidis25FAS,
+                  title={Conditional Prediction by Simulation for Automated Driving}, 
+                  author={Fabian Konstantinidis and Moritz Sackmann and Ulrich Hofmann and Christoph Stiller},
+                  year={2025},
+                  eprint={2502.03286},
+                  archivePrefix={arXiv},
+                  primaryClass={cs.RO},
+                  url={https://arxiv.org/abs/2502.03286},
+              }
+            </code></pre>
           </div>
         </div>
       </div>
