--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
   <script src="static/js/index.js"></script>
 </head>
 
+<!-- start page -->
 <body>
+
 <!-- Page header -->  
 <section class="hero">
   <div class="hero-body">
@@ -112,6 +114,7 @@
 </section>
 <!-- End page header -->
 
+
 <!-- Model teaser-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -126,6 +129,7 @@
   </div>
 </section>
 <!-- End model teaser -->
+
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -152,6 +156,7 @@
 </section>
 <!-- End paper abstract -->
 
+
 <!-- Image section -->
 <section class="section hero">
   <div class="container is-max-desktop">
@@ -171,6 +176,8 @@
     </div>
   </div>
 </section>
+<!-- End Image section -->
+
 
 <!-- Image section -->
 <section class="section hero">
@@ -200,6 +207,7 @@
   </div>
 </section>
 <!-- End image section -->
+
 
 <!-- Teaser video-->
 <section class="hero teaser">
@@ -337,6 +345,24 @@
 <!-- End teaser video -->
 
 
+<!-- Acknowledgment section -->
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-2"> Acknowledgment</h2>
+        <div class="content">
+          <p>
+            The authors would like to thank Matthias Dingwerth and Matthias Steiner for their support and contributions to the development of the simulation framework.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--End Acknowledgment section -->
+
+
 <!--BibTex citation -->
 <section class="hero is-small" id="BibTeX">
   <div class="hero-body">
@@ -346,13 +372,11 @@
           <h2 class="title">BibTeX</h2>
           <div class="has-text-justified">
             <pre><code style="width:100%;">
-              @misc{konstantinidis25FAS,
-                  title={Conditional Prediction by Simulation for Automated Driving}, 
-                  author={Fabian Konstantinidis and Moritz Sackmann and Ulrich Hofmann and Christoph Stiller},
-                  year={2025},
-                  eprint={2502.03286},
-                  archivePrefix={arXiv},
-                  url={https://arxiv.org/abs/2502.03286},
+              @article{konstantinidis2025conditional,
+                title={Conditional Prediction by Simulation for Automated Driving},
+                author={Konstantinidis, Fabian and Sackmann, Moritz and Hofmann, Ulrich and Stiller, Christoph},
+                journal={arXiv preprint arXiv:2502.03286},
+                year={2025}
               }
             </code></pre>
           </div>
@@ -362,6 +386,7 @@
   </div>
 </section>
 <!--End BibTex citation -->
+
 
 <!-- Footer -->
 <footer class="footer">
