--- a/index.html
+++ b/index.html
@@ -367,17 +367,17 @@
 <section class="hero is-small" id="BibTeX">
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
+      <div class="columns is-centered">
         <div class="column is-four-fifths">
-          <h2 class="title">BibTeX</h2>
-          <div class="has-text-justified">
-            <pre><code style="width:100%;">
-              @article{konstantinidis2025conditional,
-                title={Conditional Prediction by Simulation for Automated Driving},
-                author={Konstantinidis, Fabian and Sackmann, Moritz and Hofmann, Ulrich and Stiller, Christoph},
-                journal={arXiv preprint arXiv:2502.03286},
-                year={2025}
-              }
+          <h2 class="title has-text-centered">BibTeX</h2>
+          <div class="has-text-left">
+            <pre><code>
+@article{konstantinidis2025conditional,
+  title={Conditional Prediction by Simulation for Automated Driving},
+  author={Konstantinidis, Fabian and Sackmann, Moritz and Hofmann, Ulrich and Stiller, Christoph},
+  journal={arXiv preprint arXiv:2502.03286},
+  year={2025}
+}
             </code></pre>
           </div>
         </div>
